# non-parametric-regression

./: .gitignore  .tmp_travis.yml  .travis.yml  .travis0.yml  CMakeLists.txt  README.md  install.py  install.sh  lwr_options.pxd
_python/: lwr.pyx  lwr_options.cpp  lwr_options.pxd  lwr_options.pyx  setup.py
examples/: lwr_example1.py  lwr_example2.py
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/src/: example1.cpp
examples/example1/src/: example1.cpp
examples/python/: README.md  lwr_1D_example1.py  lwr_1D_example2.py  lwr_2D_example1.py  lwr_2D_example2.py
include/lwr/: lwr_options.h
include/utils/: npr_utils.h
lib/: lwr_example1.py  lwr_examples.py
lwr/: CMakeLists.txt
lwr/include/lwr/: lwr.h  lwr_flann.h
lwr/src/lwr/: lwr.cpp  lwr_flann.cpp
npr/: CMakeLists.txt
npr/cmake/: NPR_FindFLANN.cmake
npr/lwr/: CMakeLists.txt
npr/lwr/cmake/: Config.cmake.in
npr/lwr/include/lwr/: lwr.h  lwr_point_cloud.h
npr/lwr/src/lwr/: lwr_flann.cpp
npr/utils/: CMakeLists.txt
pynpr/: CMakeLists.txt
pynpr/src/: lwr_module.cpp
python/: CMakeLists.txt  lwr_module.cpp  setup.py
src/: lwr.cpp  lwr_flann.cpp  lwr_run.cpp  lwr_test.cpp
src/lwr/: lwr.cpp
test/: lwr_test.cpp  lwr_tests.cpp  main.cpp
tests/: CMakeLists.txt  lwr_test.cpp
